feat: button view dokumen untuk admin proses AMI

--- a/pengawasan/pengawasan-audit.html
+++ b/pengawasan/pengawasan-audit.html
@@ -437,6 +437,9 @@
                                        <th>
                                           <span class="userDatatable-title">Perbaikan</span>
                                        </th>
+                                       <th>
+                                          <span class="userDatatable-title">File Proses AMI</span>
+                                       </th>
                                     </tr>
                                  </thead>
                                  <tbody id="content">
