--- a/users/users-prodi.html
+++ b/users/users-prodi.html
@@ -524,7 +524,7 @@
                                 <div class="userDatatable adv-table-table global-shadow border-light-0 w-100 adv-table">
                                     <div class="table-responsive">
                                         <div class="adv-table-table__header">
-                                            <h4>Data Unit / Program Studi</h4>
+                                            <h4>Data Auditee</h4>
                                             <div class="adv-table-table__button">
                                                 <div class="dropdown">
                                                     <a class="btn btn-primary dropdown-toggle dm-select" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -550,13 +550,13 @@
                                           <span class="userDatatable-title">Fakultas  </span>
                                        </th> -->
                                                     <th>
-                                                        <span class="userDatatable-title">Program Studi / Unit</span>
+                                                        <span class="userDatatable-title">Auditee</span>
                                                     </th>
                                                     <th>
                                                         <span class="userDatatable-title">Jenjang</span>
                                                     </th>
                                                     <th data-type="html" data-name='position'>
-                                                        <span class="userDatatable-title">Kaprodi / Direktur</span>
+                                                        <span class="userDatatable-title">Nama Pejabat</span>
                                                     </th>
                                                     <th>
                                                         <span class="userDatatable-title">NIDN</span>
