--- a/ami/ami.html
+++ b/ami/ami.html
@@ -668,6 +668,15 @@
                                     </thead>
                                     <tbody id="content"></tbody>
                                 </table>
+                                <div class="col-12">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <div class="dm-pagination d-flex">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
