--- a/prodi/pengawasan-audit-detail.html
+++ b/prodi/pengawasan-audit-detail.html
@@ -574,7 +574,7 @@
                             </div>
                             <div class="col-sm-9">
                               <div class="with-icon">
-                                <p>Link url Gdrive dokumen temuan harap dibuat satu link</p>
+                                <p>Harap gunakan satu link url Gdrive</p>
                                 <input
                                   type="text"
                                   class="form-control ih-medium ip-gray radius-xs b-light"
