--- a/auditors/pengawasan-audit-detail.html
+++ b/auditors/pengawasan-audit-detail.html
@@ -490,28 +490,23 @@
                             </div>
                           </div>
                           <div class="form-group row mb-25">
-                            <div class="col-sm-3 d-flex aling-items-center">
+                            <div class="col-sm-3 d-flex align-items-center">
                               <label
-                                for="inputNameIcon"
                                 class="col-form-label color-dark fs-14 fw-500 align-center mb-10"
                                 >Kelengkapan Dokumen Indikator</label
                               >
                             </div>
                             <div class="col-sm-9">
-                              <div class="with-icon">
-                                <a
-                                  href=""
-                                  id="linkPerbaikan"
-                                  style="
-                                    font-size: 12px;
-                                    padding: 6px 12px;
-                                    border: 1px solid;
-                                  "
-                                  >Kunjungi Link Dokumen Indikator</a
-                                >
+                              <!-- <div class="with-icon"> -->
+                                <div id="linkPerbaikanDisplay">
+                                  <!-- Akan diisi lewat JavaScript -->
+                                </div>
+                                <input type="hidden" id="linkPerbaikan" />
                               </div>
-                            </div>
+                            <!-- </div> -->
                           </div>
+                          
+                          
                           <div class="form-group row mb-25">
                             <div class="col-sm-3 d-flex aling-items-center">
                               <label
