--- a/prodi/pengawasan-audit-detail.html
+++ b/prodi/pengawasan-audit-detail.html
@@ -573,6 +573,15 @@
                               </label>
                             </div>
                             <div class="col-sm-9">
+                              <!-- Dropdown untuk memilih tipe input -->
+                              <div class="mb-3">
+                                <label for="tipe_input" class="form-label">Pilih Tipe Input</label>
+                                <select id="tipe_input" class="form-select form-control ih-medium ip-gray radius-xs b-light">
+                                  <option value="link">Link Perbaikan (GDrive)</option>
+                                  <option value="text">Text Document</option>
+                                </select>
+                              </div>
+                            
                               <div class="with-icon">
                                 <p>Harap gunakan satu link url Gdrive</p>
                                 <input
@@ -582,7 +591,7 @@
                                   placeholder="Enter link here"
                                 />
                               </div>
-                            </div>
+                            </div>                            
                           </div>
 
                           <!--  <div class="form-group row mb-25 form-group-to-hide">
