--- a/pengawasan/proses_ami.html
+++ b/pengawasan/proses_ami.html
@@ -725,8 +725,10 @@
                             </th>
                           </tr>
                         </thead>
-                        <tbody id="content"></tbody>
+                        <tbody id="content">
+                        </tbody>
                       </table>
+                      <div id="pagination" class="pagination-container" style="margin-top: 20px;"></div>
                     </div>
                   </div>
                 </div>
